k8s/02-networkpolicy/team-alpha-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: team-alpha
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports: #communication with DNS server
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
