k8s/02-networkpolicy/team-alpha-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: team-alpha
spec:
  podSelector: {} #select all pods in the namespace
  policyTypes:
    - Ingress
    - Egress
